force-app/main/default/objects/Claim/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Siniestros (Cliente)</relationshipLabel>
    <relationshipName>Siniestros</relationshipName>
    <type>Lookup</type>
</CustomField>