force-app/main/default/objects/Claim/fields/Correo_electr_nico__c.field-meta.xml
<CustomField>
    <fullName>Correo_electr_nico__c</fullName>
    <label>Correo electrónico</label>
    <type>Email</type>
</CustomField>