force-app/main/default/objects/Claim/fields/DSALES_Ano__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Ano__c</fullName>
    <label>Año</label>
    <length>150</length>
    <type>Text</type>
</CustomField>