force-app/main/default/objects/Claim/fields/DSALES_Causa__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Causa__c</fullName>
    <label>Causa</label>
    <length>25</length>
    <type>Text</type>
</CustomField>