force-app/main/default/objects/Claim/fields/DSALES_Estatus_C__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Estatus_C__c</fullName>
    <description>Campo para mostrar el proceso en el que se encuentra el siniestro</description>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>En trámite</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Completado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>