force-app/main/default/objects/Claim/fields/DSALES_Indemnizacionaprobada__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Indemnizacionaprobada__c</fullName>
    <description>Campo resumen para el conteo de pagos en resumen de pago de siniestro</description>
    <label>Indemnización aprobada</label>
    <summarizedField>ClaimPaymentSummary.PaymentAmount</summarizedField>
    <summaryForeignKey>ClaimPaymentSummary.ClaimId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>