force-app/main/default/objects/Claim/fields/DSALES_Monto__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Monto__c</fullName>
    <description>monto de pago siniestro</description>
    <label>Monto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>