force-app/main/default/objects/Claim/fields/DSALES_Motivo_rechazo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Motivo_rechazo__c</fullName>
    <description>Muestra el motivo de rechazo del siniestro</description>
    <label>Motivo de rechazo</label>
    <length>150</length>
    <type>Text</type>
</CustomField>