force-app/main/default/objects/Claim/fields/DSALES_Nombre_conductor__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Nombre_conductor__c</fullName>
    <label>Nombre del conductor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>