force-app/main/default/objects/Claim/fields/DSALES_Numero_cliente_credito__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Numero_cliente_credito__c</fullName>
    <description>Muestra el numero de cliente coppel de credito</description>
    <label>Número de cliente de crédito</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>