force-app/main/default/objects/Claim/fields/DSALES_Reporte__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Reporte__c</fullName>
    <description>Número que envía la aseguradora vía telefónica</description>
    <label>Reporte</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>