force-app/main/default/objects/Claim/fields/DSALES_Serie__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Serie__c</fullName>
    <label>Serie</label>
    <length>50</length>
    <type>Text</type>
</CustomField>