force-app/main/default/objects/Claim/fields/DSALES_SiniestroUid__c.field-meta.xml
<CustomField>
    <fullName>DSALES_SiniestroUid__c</fullName>
    <description>uid que regresa inter</description>
    <label>Siniestro uid</label>
    <length>32</length>
    <type>Text</type>
</CustomField>