force-app/main/default/objects/Claim/fields/DSALES_Tipo_pago__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tipo_pago__c</fullName>
    <label>Tipo de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Pago a Cliente</fullName>
            </value>
            <value>
                <fullName>Pago a cuenta Coppel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>