force-app/main/default/objects/Claim/fields/N_mero_de_Siniestro__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_Siniestro__c</fullName>
    <displayFormat>SNT-{0000000}</displayFormat>
    <label>Número de Siniestro</label>
    <type>AutoNumber</type>
</CustomField>