force-app/main/default/objects/Claim/fields/P_liza__c.field-meta.xml
<CustomField>
    <fullName>P_liza__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Número de Póliza</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Siniestros</relationshipLabel>
    <relationshipName>Siniestros</relationshipName>
    <type>Lookup</type>
</CustomField>