force-app/main/default/objects/Claim/recordTypes/DSALES_Siniestro.recordType-meta.xml
<RecordType>
    <fullName>DSALES_Siniestro</fullName>
    <active>true</active>
    <label>Siniestro</label>
</RecordType>