force-app/main/default/objects/Claim/listViews/All_Claims.listView-meta.xml
<ListView>
    <fullName>All_Claims</fullName>
    <columns>Name</columns>
    <columns>Cliente__c</columns>
    <columns>DSALES_Estatus__c</columns>
    <columns>ClaimType</columns>
    <columns>PolicyNumber</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los siniestros</label>
</ListView>