force-app/main/default/objects/Claim/listViews/Mis_siniestros.listView-meta.xml
<ListView>
    <fullName>Mis_siniestros</fullName>
    <columns>Name</columns>
    <columns>Cliente__c</columns>
    <columns>DSALES_Estatus__c</columns>
    <columns>ClaimType</columns>
    <columns>PolicyNumber</columns>
    <columns>CreatedDate</columns>
    <filterScope>Mine</filterScope>
    <label>Mis siniestros</label>
    <sharedTo>
        <role>DSALES_Admin_SM</role>
        <role>DSALES_Agente_de_servicio_SM</role>
        <role>DSALES_Atenci_n_a_servicio</role>
    </sharedTo>
</ListView>